# voxel2mesh

./: CMakeLists.txt  README.md  build.sh  utils.js  voxel2mesh.vue
src/: Makefile  main.c  meshify.c  nii2mesh-old.c  voxel2mesh.js  voxel2mesh.wasm
